Home page rendering in JAX-RS